--- a/app-admin/src/pages/statistics/index.less
+++ b/app-admin/src/pages/statistics/index.less
@@ -1,12 +1,30 @@
+.statistics {
+  // ul{
+  //   list-style: none;
+  // }
+  // li{
+  //     margin: 10px; padding: 10px; background-color: rgba(255, 0, 149, 0.486); width: 100px; color: rgba(214, 15, 15, 0.945); font-size: 24px; text-align:center; display: inline-block; cursor: pointer; user-select: none;
+  // }
+  // li:hover{
+  //     box-shadow: 0 0 20px 0 rgba(71, 0, 65, 0.2);
+  // }
+}
 
-.statistics{
-  ul{
-    list-style: none;
-  }
-  li{
-      margin: 10px; padding: 10px; background-color: rgba(255, 0, 149, 0.486); width: 100px; color: rgba(214, 15, 15, 0.945); font-size: 24px; text-align:center; display: inline-block; cursor: pointer; user-select: none;
-  }
-  li:hover{
-      box-shadow: 0 0 20px 0 rgba(71, 0, 65, 0.2);
-  }
+
+.bizcharts-plot-title {
+  padding: 10px 0px 0px 10px;
+  font-family: "PingFang SC";
+  font-size: 18px;
+  color: black;
+  text-align: left;
+  line-height: 20px;
+}
+
+.bizcharts-plot-description {
+  padding: 8px 24px 10px 10px;
+  font-family: "PingFang SC";
+  font-size: 12px;
+  color: grey;
+  text-align: left;
+  line-height: 16px;
 }
